--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Replit user <<>>"]
 python = "^3.10"
 Flask = "^2.2.3"
 SQLAlchemy = "^2.0.4"
+PyMySQL = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
